Revert "add support for mvn exec:java"
This reverts commit e9c03abc7fa10c66ef1c148d06aa09c94f949410.